# pseudotaxus

./: AUTHORS  Changelog.md  DEPENDENCIES.txt  Makefile.am  NEWS  README.md  README.org  cast.sh  configure.ac  guix.scm  incant.sh  tokens.org
doc/: pseudotaxus.texi  syntax.texi
pseudotaxus/: pseudotaxus.cf
tests/: basic.pseudo  bigtest1.pseudo  define.pseudo  define2.pseudo  keywords.pseudo  normal.pseudo
